# metalr

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: lib.rs  mtlargument.rs  mtlblitcommandencoder.rs  mtlbuffer.rs  mtlcommandbuffer.rs  mtlcommandencoder.rs  mtlcommandqueue.rs  mtldepthstencildescriptor.rs  mtldepthstencilstate.rs  mtldevice.rs  mtldrawable.rs  mtlfunction.rs  mtlfunctionconstantvalues.rs  mtllibrary.rs  mtlpixelformat.rs  mtlprimitivetype.rs  mtlrendercommandencoder.rs  mtlrenderpassattachmentdescriptor.rs  mtlrenderpasscolorattachmentdescriptor.rs  mtlrenderpasscolorattachmentdescriptorarray.rs  mtlrenderpassdepthattachmentdescriptor.rs  mtlrenderpassdescriptor.rs  mtlrenderpipelinecolorattachmentdescriptor.rs  mtlrenderpipelinecolorattachmentdescriptorarray.rs  mtlrenderpipelinedescriptor.rs  mtlrenderpipelinestate.rs  mtlresource.rs  mtlsampler.rs  mtltexture.rs  mtltexturedescriptor.rs  mtltypes.rs
