[package]
name = "metalr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objr = {git = "https://github.com/drewcrawford/objr"}
foundationr = {git = "https://github.com/drewcrawford/foundationr",features=["nsrange"]}
blocksr = {git = "https://github.com/drewcrawford/blocksr",features=["continuation"]}